# hotbox

./: .coveragerc  .env.local  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yaml  pyproject.toml  setup.cfg  tasks.py
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: publish.yaml  test.yaml
docs/: contributing.md  get-started.md  index.md  learn-more.md  release-notes.md
examples/: README.md
examples/go-scraper/: main.go
hotbox/: __init__.py  _types.py  api.py  app.py  cli.py  const.py  ec2.py  fc.py  gunicorn_conf.py  main.py  services.py  settings.py  setup-fc-vm.sh  setup-fc.sh  setup-old.sh  setup.sh  templates.py  types.py  utils.py
hotbox/app_code/: main.go
hotbox/app_docker_template/: Dockerfile  entrypoint  inittab  start.sh
hotbox/cli/: create.py  delete.py  get.py  main.py  server.py
hotbox/templates/: ec2_userdata.sh.j2  run_app.sh.j2
hotbox/templates/image/: Dockerfile.j2  entrypoint.j2  inittab  interfaces  start.sh.j2
hotbox/templates/lang/go/: build  entrypoint  install
hotbox/userdata/app/: build.sh  provision.sh.j2
hotbox/userdata/ec2/: provision.sh.j2
pyrocloud/: __init__.py  app.py  cli.py  const.py  ec2.py  fc.py  main.py  services.py  types.py
scripts/: bump_version.py  clean.sh  docs-build.sh  format.sh  install.sh  lint.sh  run-uvicorn.sh  test.sh
tests/: conftest.py  mocks.py  test_api.py  test_app_cli.py  test_cli.py  test_ec2_cli.py  test_gunicorn_conf.py  test_main.py  test_utils.py  test_version.py
tests/assets/code/go/: main.go
tests/assets/code/hoon/: hey.hoon
tests/assets/files/: ec2.json
