[build-system]
requires = [
    "setuptools >=65.0",
    "wheel >=0.36.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "hotbox"
dynamic = ["version"]
readme = "README.md"
license = {text = 'See LICENSE'}
description = "hotbox"
requires-python = ">=3.8"
dependencies = [
    "boto3 >=1.20.10",
    "fastapi >=0.70.0",
    "typer >=0.4.0",
    "pydantic >=1.8.2",
    "rich >=10.12.0",
    "jinja2 >=3.0.2",
    "python-multipart >=0.0.5",
    "uvicorn >=0.15.0",
    "httpx >=0.21.1",
    "python-dotenv >=0.19.1",
    "orjson >=3.6.4",
]
[[project.authors]]
name = "Anthony Corletti"
email = "anthcor@gmail.com"

[project.scripts]
hotbox = "hotbox.cli.main:app"

[project.optional-dependencies]
dev = [
    "mypy <1.1.1", # https://github.com/pydantic/pydantic/issues/5190
    "black >=21.10b0",
    "ruff >=0.0.98",
    "pre-commit >=2.17.0",
    "mkdocs >=1.4.2",
    "mdx-include >=1.4.2",
    "mkdocs-material >=9.1.5",
    "invoke >=1.6.0",
    "packaging >=21.0",
    "pytest >=6.2.5",
    "pytest-asyncio >=0.20.3",
    "coverage >=6.1.1",
    "pytest-cov >=3.0.0",
]

[project.urls]
Documentation = "https://github.com/anthonycorletti/hotbox"

[tool.setuptools.dynamic]
version = {attr = "hotbox.__version__"}

[tool.ruff]
line-length = 88
ignore = ["D10"]
include = ["*.py"]
select = ["E", "F", "I"]
target-version = "py310"
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D415",
]

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.*_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
mypy_path = ["hotbox", "tests"]
exclude = ["dist", "build", ".venv"]

[tool.coverage.run]
source = ["hotbox", "tests"]
omit = ["*__init__.py"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError'
]
