[metadata]
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True

[options.package_data]
hotbox =
    cli/**/*
    templates/**/*
    py.typed

[options.packages.find]
include =
    hotbox
exclude =
    tests
